Project Folder Refactoring

--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.marco</groupId>
-	<artifactId>JavaCovidStatus</artifactId>
+	<artifactId>covidstatus</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>JavaCovidStatus</name>
+	<name>CovidStatus</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
