--- a/Docker/PostgreSQL/Dockerfile
+++ b/Docker/PostgreSQL/Dockerfile
@@ -2,5 +2,5 @@ FROM postgres:9.5
 
 COPY initDb.sql  /docker-entrypoint-initdb.d
 
-ENV POSTGRES_PASSWORD=REPLACE_ME
-ENV POSTGRES_USER=REPLACE_ME
+ENV POSTGRES_PASSWORD=postgres
+ENV POSTGRES_USER=postgres
