--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,10 @@ spring:
     url: jdbc:postgresql://localhost:5432/coviditaly
     username: postgres
     password: postgres
-
+#  autoconfigure:
+#    exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration, org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
 
 server:  servlet:    context-path: /Covid19Italy
+    
+#covidstatus:
+#  serviceimpl: rasp
