--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/coviditaly
+    url: jdbc:postgresql://192.168.1.14:5432/coviditaly
     username: postgres
     password: postgres
   #autoconfigure:
