--- a/Scripts/Docker/PostgreSQL/Dockerfile
+++ b/Scripts/Docker/PostgreSQL/Dockerfile
@@ -1,6 +1,6 @@
 FROM postgres:9.5
 
-COPY initDb.sql  /docker-entrypoint-initdb.d
+COPY initCovidDb.sql  /docker-entrypoint-initdb.d
 
 ENV POSTGRES_PASSWORD=postgres
 ENV POSTGRES_USER=postgres
