--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>com.marco</groupId>
 	<artifactId>covidstatus</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2</version>
 	<name>CovidStatus</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -73,6 +73,15 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 		</dependency>
+		
+		<!-- To parse HTML -->
+		<dependency>
+		    <groupId>org.jsoup</groupId>
+		    <artifactId>jsoup</artifactId>
+		    <version>1.13.1</version>
+		</dependency>
+		
+		
 		<!-- My custom libraries. You can find the source code on my GitHub
 			https://github.com/marcosolina/WebJar		
 			https://github.com/marcosolina/javautils
