--- a/src/main/resources/messages/errorCodes.properties
+++ b/src/main/resources/messages/errorCodes.properties
@@ -1,1 +1,3 @@
 COVID00001 = Si è verificato un errore. Scrivimi una email spiegando cosa è successo, grazie
+COVID00002 = Le date "da" "a" sono obbligatorie
+COVID00003 = Il codice regione è obbligatorio
